modify favorite button

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         <p class="card__descr">Ménilmontant</p>    
                     </div>
                 </a>
-                <a href="#"><span class="favorite far fa-heart"></span></a>    
+                <a href="#"><span class="favorite fas fa-heart"></span></a>    
             </div>
 
             <div class="card" title="Nouveau"> 
@@ -75,7 +75,7 @@
                         <p class="card__descr">Charonne</p>    
                     </div>
                 </a>
-                <a href="#"><span class="favorite favorite--active far fa-heart"></span></a>    
+                <a href="#"><span class="favorite favorite--active fas fa-heart"></span></a>    
             </div>
 
             <div class="card">
@@ -86,7 +86,7 @@
                         <p class="card__descr">Cité Rouge</p>                            
                     </div>
                 </a>
-                <a href="#"><span class="favorite far fa-heart"></span></a>    
+                <a href="#"><span class="favorite fas fa-heart"></span></a>    
             </div>
 
             <div class="card">
@@ -97,7 +97,7 @@
                         <p class="card__descr">Folie-Méricourt</p>    
                     </div>
                 </a>
-                <a href="#"><span class="favorite far fa-heart"></span></a>    
+                <a href="#"><span class="favorite fas fa-heart"></span></a>    
             </div>
         </section>
     </main>
