--- a/menus/a-la-francaise.html
+++ b/menus/a-la-francaise.html
@@ -25,7 +25,7 @@
         <div class="menu__wrapper">
             <div class="title-wrapper">
                 <h1 class="menu-title">À la française</h1>
-                <span class="far fa-heart"></span>
+                <a href="#"><span class="favorite fas fa-heart"></span></a>
             </div>
     
             <div class="menu-catagory">
