--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="top-banner">
             <h1 class="top-banner__title home-title">Réservez le menu qui vous convient</h1>
             <p class="top-banner__descr">Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
-            <button class="top-banner__button" type="button">
+            <button class="top-banner__btn btn" type="button">
                 Explorer nos restaurants
             </button>
         </div>
