--- a/menus/a-la-francaise.html
+++ b/menus/a-la-francaise.html
@@ -106,7 +106,7 @@
                 </div>               
             </div>
         </div>
-        <button class="button" type="button">Commander</button>
+        <button class="menu__btn btn" type="button">Commander</button>
     </main>
 
 
