change heart from link to button

--- a/menus/a-la-francaise.html
+++ b/menus/a-la-francaise.html
@@ -25,7 +25,7 @@
         <div class="menu__wrapper">
             <div class="title-wrapper">
                 <h1 class="menu-title">À la française</h1>
-                <a href="#"><span class="favorite fas fa-heart"></span></a>
+                <button class="fas fa-heart" type="button"></button>
             </div>
     
             <div class="menu-catagory">
