--- a/index.html
+++ b/index.html
@@ -56,26 +56,28 @@
         <section class="restaurants">
             <h2 class="section-title" id="restaurants">Restaurants</h2>
 
-            <div class="card" title="Nouveau">
+            <div class="card">
                 <a href="/menus/la-palette-du-gout.html">
+                    <span class="new"><p>Nouveau</p></span>
                     <img class="card__img" src="/images/menus/la-palette-du-gout.jpg" alt="Photo: La palette du goût">
                     <div class="card__content">
                         <h3 class="card__title">La palette du goût</h3>
                         <p class="card__descr">Ménilmontant</p>    
                     </div>
                 </a>
-                <a href="#"><span class="favorite fas fa-heart"></span></a>    
+                <button class="fas fa-heart" type="button"></button>    
             </div>
-
-            <div class="card" title="Nouveau"> 
+            
+            <div class="card"> 
                 <a href="/menus/la-note-enchantee.html">
                     <img class="card__img" src="/images/menus/la-note-enchantee.jpg" alt="Photo: La note enchantée">
+                    <span class="new"><p>Nouveau</p></span>
                     <div class="card__content">
                         <h3 class="card__title">La note enchantée</h3>
                         <p class="card__descr">Charonne</p>    
                     </div>
                 </a>
-                <a href="#"><span class="favorite favorite--active fas fa-heart"></span></a>    
+                <button class="fas fa-heart fa-heart--active" type="button"></button>    
             </div>
 
             <div class="card">
@@ -86,7 +88,7 @@
                         <p class="card__descr">Cité Rouge</p>                            
                     </div>
                 </a>
-                <a href="#"><span class="favorite fas fa-heart"></span></a>    
+                <button class="fas fa-heart" type="button"></button>    
             </div>
 
             <div class="card">
@@ -97,7 +99,7 @@
                         <p class="card__descr">Folie-Méricourt</p>    
                     </div>
                 </a>
-                <a href="#"><span class="favorite fas fa-heart"></span></a>    
+                <button class="fas fa-heart" type="button"></button>    
             </div>
         </section>
     </main>
