--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body class="home">
     <header class="header">
-        <img class="header-logo" src="/images/logo/ohmyfood@2x.svg" alt="logo">
+        <h1>ohmyfood</h1>
     </header>
     <main>
         <div class="search-box">
@@ -23,7 +23,7 @@
         </div>
 
         <div class="top-banner">
-            <h1 class="top-banner__title home-title">Réservez le menu qui vous convient</h1>
+            <h2 class="top-banner__title home-title">Réservez le menu qui vous convient</h1>
             <p class="top-banner__descr">Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
             <button class="top-banner__btn btn" type="button">
                 Explorer nos restaurants
@@ -106,12 +106,10 @@
 
     <footer class="footer">
         <h4 class="footer__title">ohmyfood</h4>
-        <div>
-            <a class="footer__link" href="#"><p><span class="footer__icon fas fa-utensils fa-fw fa-xs"></span>Proposer un restaurant</p></a>
-            <a class="footer__link" href="#"><p><span class="footer__icon fas fa-hands-helping fa-fw fa-xs"></span>Devenir partenaire</p></a>
-            <a class="footer__link" href="#"><p>Mentions légales</p></a>
-            <a class="footer__link" href="mailto:contact@ohmyfood.fr"><p>Contact</p></a>
-        </div>
+        <a href="#"><p><span class="footer__icon fas fa-utensils fa-fw fa-xs"></span>Proposer un restaurant</p></a>
+        <a href="#"><p><span class="footer__icon fas fa-hands-helping fa-fw fa-xs"></span>Devenir partenaire</p></a>
+        <a href="#"><p>Mentions légales</p></a>
+        <a href="mailto:contact@ohmyfood.fr"><p>Contact</p></a>
     </footer>
 </body>
 </html>
