--- a/menus/a-la-francaise.html
+++ b/menus/a-la-francaise.html
@@ -17,7 +17,7 @@
         <a href="../index.html">
             <span class="header__button fas fa-arrow-left"></span>
         </a>
-        <img class="header-logo" src="/images/logo/ohmyfood@2x.svg" alt="logo">
+        <p class="h1-font-style">ohmyfood</p>
         <img class="menu-photo" src="/images/menus/a-la-francaise.jpg" alt="Photo: restaurant" title="À la française">
     </header>
     
