--- a/index.html
+++ b/index.html
@@ -11,8 +11,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
     <title>ohmyfood</title>
-</head>
+</head>    
 <body class="home">
+    <div class="loader">
+        <div class="spinner-primary">
+            <div class="spinner-secondary">
+            </div>
+        </div>
+        <p class="loading-text">ohmyfood</p>
+    </div>
+
     <header class="header">
         <h1>ohmyfood</h1>
     </header>
