modify spinner style

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 </head>    
 <body class="home">
     <div class="loader">
-        <div class="spinner-primary">
-            <div class="spinner-secondary">
-            </div>
+        <div class="spinner">
+            <div class="spinner-primary"></div>
+            <div class="spinner-secondary"></div>
+            <div class="loading-text"><p>ohmyfood</p></div>
         </div>
-        <p class="loading-text">ohmyfood</p>
     </div>
 
     <header class="header">
