--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
             <h2 class="section-title" id="restaurants">Restaurants</h2>
 
             <div class="card">
-                <a href="/menus/la-palette-du-gout.html">
+                <a href="./menus/la-palette-du-gout.html">
                     <span class="new"><p>Nouveau</p></span>
-                    <img class="card__img" src="/images/menus/la-palette-du-gout.jpg" alt="Photo: La palette du goût">
+                    <img class="card__img" src="./images/menus/la-palette-du-gout.jpg" alt="Photo: La palette du goût">
                     <div class="card__content">
                         <h3 class="card__title">La palette du goût</h3>
                         <p class="card__descr">Ménilmontant</p>    
@@ -77,8 +77,8 @@
             </div>
             
             <div class="card"> 
-                <a href="/menus/la-note-enchantee.html">
-                    <img class="card__img" src="/images/menus/la-note-enchantee.jpg" alt="Photo: La note enchantée">
+                <a href="./menus/la-note-enchantee.html">
+                    <img class="card__img" src="./images/menus/la-note-enchantee.jpg" alt="Photo: La note enchantée">
                     <span class="new"><p>Nouveau</p></span>
                     <div class="card__content">
                         <h3 class="card__title">La note enchantée</h3>
@@ -89,8 +89,8 @@
             </div>
 
             <div class="card">
-                <a href="/menus/a-la-francaise.html">
-                    <img class="card__img" src="/images/menus/a-la-francaise.jpg" alt="Photo: À la française">
+                <a href="./menus/a-la-francaise.html">
+                    <img class="card__img" src="./images/menus/a-la-francaise.jpg" alt="Photo: À la française">
                     <div class="card__content">
                         <h3 class="card__title">À la française</h3>
                         <p class="card__descr">Cité Rouge</p>                            
@@ -100,8 +100,8 @@
             </div>
 
             <div class="card">
-                <a href="/menus/le-delice-des-sens.html">
-                    <img class="card__img" src="/images/menus/le-delice-des-sens.jpg" alt="Photo: Le délice des sens">
+                <a href="./menus/le-delice-des-sens.html">
+                    <img class="card__img" src="./images/menus/le-delice-des-sens.jpg" alt="Photo: Le délice des sens">
                     <div class="card__content">
                         <h3 class="card__title">Le délice des sens</h3>
                         <p class="card__descr">Folie-Méricourt</p>    
