--- a/menus/a-la-francaise.html
+++ b/menus/a-la-francaise.html
@@ -18,7 +18,7 @@
             <span class="header__button fas fa-arrow-left"></span>
         </a>
         <p class="h1-font-style">ohmyfood</p>
-        <img class="menu-photo" src="/images/menus/a-la-francaise.jpg" alt="Photo: restaurant" title="À la française">
+        <img class="menu-photo" src="../images/menus/a-la-francaise.jpg" alt="Photo: restaurant" title="À la française">
     </header>
     
     <main class="menu__content">
