--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
         <section class="steps">
             <h2 class="section-title">Fonctionnement</h2>
-            <div class="steps-wrapper">
+            <div class="steps__wrapper">
                 <div class="step">
                     <p class="step__num">1</p>
                     <span class="step__icon fas fa-mobile-alt fa-fw"></span>
@@ -53,9 +53,9 @@
                     <p class="step__descr">Composez votre menu</p>
                 </div>
     
-                <div class="step step--active">
+                <div class="step">
                     <p class="step__num">3</p>
-                    <span class="step__icon step--active__icon fas fa-store fa-fw"></span>
+                    <span class="step__icon fas fa-store fa-fw"></span>
                     <p class="step__descr">Dégustez votre menu</p>
                 </div>
             </div>
