update footer structure

--- a/menus/a-la-francaise.html
+++ b/menus/a-la-francaise.html
@@ -157,12 +157,12 @@
 
     <footer class="footer">
         <h4 class="footer__title">ohmyfood</h4>
-        <div>
-            <a class="footer__link" href="#"><p><span class="footer__icon fas fa-utensils fa-fw fa-xs"></span>Proposer un restaurant</p></a>
-            <a class="footer__link" href="#"><p><span class="footer__icon fas fa-hands-helping fa-fw fa-xs"></span>Devenir partenaire</p></a>
-            <a class="footer__link" href="#"><p>Mentions légales</p></a>
-            <a class="footer__link" href="mailto:contact@ohmyfood.fr"><p>Contact</p></a>
-        </div>
+        <ul>
+            <li><a href="#"><p><span class="footer__icon fas fa-utensils fa-fw fa-xs"></span>Proposer un restaurant</p></a></li>
+            <li><a href="#"><p><span class="footer__icon fas fa-hands-helping fa-fw fa-xs"></span>Devenir partenaire</p></a></li>
+            <li><a href="#"><p>Mentions légales</p></a></li>
+            <li><a href="mailto:contact@ohmyfood.fr"><p>Contact</p></a></li>
+        </ul>
     </footer>
 </body>
 </html>
