--- a/index.html
+++ b/index.html
@@ -114,10 +114,12 @@
 
     <footer class="footer">
         <h4 class="footer__title">ohmyfood</h4>
-        <a href="#"><p><span class="footer__icon fas fa-utensils fa-fw fa-xs"></span>Proposer un restaurant</p></a>
-        <a href="#"><p><span class="footer__icon fas fa-hands-helping fa-fw fa-xs"></span>Devenir partenaire</p></a>
-        <a href="#"><p>Mentions légales</p></a>
-        <a href="mailto:contact@ohmyfood.fr"><p>Contact</p></a>
+        <ul>
+            <li><a href="#"><p><span class="footer__icon fas fa-utensils fa-fw fa-xs"></span>Proposer un restaurant</p></a></li>
+            <li><a href="#"><p><span class="footer__icon fas fa-hands-helping fa-fw fa-xs"></span>Devenir partenaire</p></a></li>
+            <li><a href="#"><p>Mentions légales</p></a></li>
+            <li><a href="mailto:contact@ohmyfood.fr"><p>Contact</p></a></li>
+        </ul>
     </footer>
 </body>
 </html>
