fix html structure, add overflow hidden

--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
     </header>
     <main>
         <div class="search-box">
-            <span class="search-box__icon fas fa-map-marker-alt"></span>
-            <p class="search-box__input">Paris, Belleville</p>
+            <p class="search-box__input"><span class="search-box__icon fas fa-map-marker-alt"></span>Paris, Belleville</p>
         </div>
 
         <div class="top-banner">
