fix structure errors acc. html & css validator

--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
         <h1>ohmyfood</h1>
     </header>
     <main>
-        <div class="search-box">
-            <p class="search-box__input"><span class="search-box__icon fas fa-map-marker-alt"></span>Paris, Belleville</p>
+        <div class="location">
+            <p class="location__input"><span class="location__icon fas fa-map-marker-alt"></span>Paris, Belleville</p>
         </div>
 
         <div class="top-banner">
-            <h2 class="top-banner__title home-title">Réservez le menu qui vous convient</h1>
+            <h2 class="top-banner__title home-title">Réservez le menu qui vous convient</h2>
             <p class="top-banner__descr">Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
             <button class="top-banner__btn btn" type="button">
                 Explorer nos restaurants
@@ -65,7 +65,7 @@
 
             <div class="card">
                 <a href="./menus/la-palette-du-gout.html">
-                    <span class="new"><p>Nouveau</p></span>
+                    <p class="new">Nouveau</p>
                     <img class="card__img" src="./images/menus/la-palette-du-gout.jpg" alt="Photo: La palette du goût">
                     <div class="card__content">
                         <h3 class="card__title">La palette du goût</h3>
@@ -78,7 +78,7 @@
             <div class="card"> 
                 <a href="./menus/la-note-enchantee.html">
                     <img class="card__img" src="./images/menus/la-note-enchantee.jpg" alt="Photo: La note enchantée">
-                    <span class="new"><p>Nouveau</p></span>
+                    <p class="new">Nouveau</p>
                     <div class="card__content">
                         <h3 class="card__title">La note enchantée</h3>
                         <p class="card__descr">Charonne</p>    
