--- a/menus/a-la-francaise.html
+++ b/menus/a-la-francaise.html
@@ -18,10 +18,10 @@
             <span class="header__button fas fa-arrow-left"></span>
         </a>
         <p class="h1-font-style">ohmyfood</p>
-        <img class="menu-photo" src="../images/menus/a-la-francaise.jpg" alt="Photo: restaurant" title="À la française">
     </header>
     
     <main class="menu__content">
+        <img class="menu__photo" src="../images/menus/a-la-francaise.jpg" alt="Photo: restaurant" title="À la française">
         <div class="menu__wrapper">
             <div class="title-wrapper">
                 <h1 class="menu-title">À la française</h1>
