--- a/menus/a-la-francaise.html
+++ b/menus/a-la-francaise.html
@@ -20,7 +20,7 @@
         <p class="h1-font-style">ohmyfood</p>
     </header>
     
-    <main class="menu__container">
+    <main class="menu__body">
         <img class="menu__photo" src="../images/menus/a-la-francaise.jpg" alt="Photo: restaurant" title="À la française">
         <div class="menu__wrapper">
             <div class="title-wrapper">
