responsive header for menu

--- a/menus/a-la-francaise.html
+++ b/menus/a-la-francaise.html
@@ -17,7 +17,9 @@
         <a href="../index.html">
             <span class="header__button fas fa-arrow-left"></span>
         </a>
-        <p class="h1-font-style">ohmyfood</p>
+        <a href="../index.html">
+            <p class="h1-font-style">ohmyfood</p>
+        </a>
     </header>
     
     <main class="menu__body">
