responsive index: modify layout t.b.c.

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <title>ohmyfood</title>
 </head>    
 <body class="home">
-    <div class="loader">
+    <!-- <div class="loader">
         <div class="spinner">
             <div class="spinner-primary"></div>
             <div class="spinner-secondary"></div>
             <div class="loading-text"><p>ohmyfood</p></div>
         </div>
-    </div>
+    </div> -->
 
     <header class="header">
         <h1>ohmyfood</h1>
@@ -62,51 +62,52 @@
 
         <section class="restaurants">
             <h2 class="section-title" id="restaurants">Restaurants</h2>
+            <div class="card-wrapper">
+                <div class="card">
+                    <a href="./menus/la-palette-du-gout.html">
+                        <p class="new">Nouveau</p>
+                        <img class="card__img" src="./images/menus/la-palette-du-gout.jpg" alt="Photo: La palette du goût">
+                        <div class="card__content">
+                            <h3 class="card__title">La palette du goût</h3>
+                            <p class="card__descr">Ménilmontant</p>    
+                        </div>
+                    </a>
+                    <button class="fas fa-heart" type="button"></button>    
+                </div>
+                
+                <div class="card"> 
+                    <a href="./menus/la-note-enchantee.html">
+                        <img class="card__img" src="./images/menus/la-note-enchantee.jpg" alt="Photo: La note enchantée">
+                        <p class="new">Nouveau</p>
+                        <div class="card__content">
+                            <h3 class="card__title">La note enchantée</h3>
+                            <p class="card__descr">Charonne</p>    
+                        </div>
+                    </a>
+                    <button class="fas fa-heart fa-heart--active" type="button"></button>    
+                </div>
 
-            <div class="card">
-                <a href="./menus/la-palette-du-gout.html">
-                    <p class="new">Nouveau</p>
-                    <img class="card__img" src="./images/menus/la-palette-du-gout.jpg" alt="Photo: La palette du goût">
-                    <div class="card__content">
-                        <h3 class="card__title">La palette du goût</h3>
-                        <p class="card__descr">Ménilmontant</p>    
-                    </div>
-                </a>
-                <button class="fas fa-heart" type="button"></button>    
-            </div>
-            
-            <div class="card"> 
-                <a href="./menus/la-note-enchantee.html">
-                    <img class="card__img" src="./images/menus/la-note-enchantee.jpg" alt="Photo: La note enchantée">
-                    <p class="new">Nouveau</p>
-                    <div class="card__content">
-                        <h3 class="card__title">La note enchantée</h3>
-                        <p class="card__descr">Charonne</p>    
-                    </div>
-                </a>
-                <button class="fas fa-heart fa-heart--active" type="button"></button>    
-            </div>
+                <div class="card">
+                    <a href="./menus/a-la-francaise.html">
+                        <img class="card__img" src="./images/menus/a-la-francaise.jpg" alt="Photo: À la française">
+                        <div class="card__content">
+                            <h3 class="card__title">À la française</h3>
+                            <p class="card__descr">Cité Rouge</p>                            
+                        </div>
+                    </a>
+                    <button class="fas fa-heart" type="button"></button>    
+                </div>
 
-            <div class="card">
-                <a href="./menus/a-la-francaise.html">
-                    <img class="card__img" src="./images/menus/a-la-francaise.jpg" alt="Photo: À la française">
-                    <div class="card__content">
-                        <h3 class="card__title">À la française</h3>
-                        <p class="card__descr">Cité Rouge</p>                            
-                    </div>
-                </a>
-                <button class="fas fa-heart" type="button"></button>    
-            </div>
-
-            <div class="card">
-                <a href="./menus/le-delice-des-sens.html">
-                    <img class="card__img" src="./images/menus/le-delice-des-sens.jpg" alt="Photo: Le délice des sens">
-                    <div class="card__content">
-                        <h3 class="card__title">Le délice des sens</h3>
-                        <p class="card__descr">Folie-Méricourt</p>    
-                    </div>
-                </a>
-                <button class="fas fa-heart" type="button"></button>    
+                <div class="card">
+                    <a href="./menus/le-delice-des-sens.html">
+                        <img class="card__img" src="./images/menus/le-delice-des-sens.jpg" alt="Photo: Le délice des sens">
+                        <div class="card__content">
+                            <h3 class="card__title">Le délice des sens</h3>
+                            <p class="card__descr">Folie-Méricourt</p>    
+                        </div>
+                    </a>
+                    <button class="fas fa-heart" type="button"></button>    
+                </div>
             </div>
         </section>
     </main>
