--- a/menus/a-la-francaise.html
+++ b/menus/a-la-francaise.html
@@ -22,7 +22,7 @@
         </a>
     </header>
     
-    <main class="menu__body">
+    <main class="menu__main">
         <img class="menu__photo" src="../images/menus/a-la-francaise.jpg" alt="Photo: restaurant" title="À la française">
         <div class="menu__wrapper">
             <div class="title-wrapper">
