--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <title>ohmyfood</title>
 </head>    
 <body class="home">
-    <!-- <div class="loader">
+    <div class="loader">
         <div class="spinner">
             <div class="spinner-primary"></div>
             <div class="spinner-secondary"></div>
             <div class="loading-text"><p>ohmyfood</p></div>
         </div>
-    </div> -->
+    </div>
 
     <header class="header">
         <h1>ohmyfood</h1>
