minor adjust header position and home body margins for tablette

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     <header class="header">
         <h1>ohmyfood</h1>
     </header>
-    <main class="index-main">
-        <section class="home-intro">
+    <main class="home-main">
+        <section class="intro">
             <div class="top-banner">
                 <div class="location">
                     <p class="location__input"><span class="location__icon fas fa-map-marker-alt"></span>Paris, Belleville</p>
