header in all pages align to center

--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
     <main class="home-main">
         <section class="intro">
             <div class="top-banner">
-                <div class="location container">
+                <div class="location">
                     <p class="location__input"><span class="location__icon fas fa-map-marker-alt"></span>Paris, Belleville</p>
                 </div>
         
-                <div class="guide container">
+                <div class="guide">
                     <h2 class="guide__title">Réservez le menu qui vous convient</h2>
                     <p class="guide__descr">Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
                     <button class="guide__btn btn" type="button">
