--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
     <!--Import Google fonts-->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap" rel="stylesheet">
-    <!-- <link rel="stylesheet" href="css/prefixed/main.css"> -->
-    <link rel="stylesheet" href="css/main.css">
+    <!-- <link rel="stylesheet" href="css/compressed/main.css"> -->
+    <link rel="stylesheet" href="css/prefixed/main.css">
     <title>ohmyfood</title>
 </head>    
 <body class="home">
-    <!-- <div class="loader">
+    <div class="loader">
         <div class="spinner">
             <div class="spinner-primary"></div>
             <div class="spinner-secondary"></div>
             <div class="loading-text"><p>ohmyfood</p></div>
         </div>
-    </div> -->
+    </div>
 
     <header class="header">
         <h1>ohmyfood</h1>
