add key words for search engines

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="keywords" content="ohmyfood, ohmyfood!, openclassrooms, openclassroom, project 3">
+    <meta name="description" content="Ohmyfood! is a Web Developer Project of OpenClassrooms">
+    <meta name="author" content="Diella, Ching-Yao TSENG">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--embading fontawesome icons-->
     <script src="https://kit.fontawesome.com/7701b960e8.js" crossorigin="anonymous"></script>
