add desc in head

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="keywords" content="ohmyfood, ohmyfood!, openclassrooms, openclassroom, project 3">
-    <meta name="description" content="Ohmyfood! is a Web Developer Project of OpenClassrooms">
+    <meta name="description" content="Ohmyfood! est une entreprise de commande de repas en ligne. Notre concept permet aux utilisateurs de composer leur propre menu et réduire leur temps d’attente dans les
+    restaurants car leur menu est préparé à l’avance. Plus de perte de temps à consulter la carte!">
     <meta name="author" content="Diella, Ching-Yao TSENG">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--embading fontawesome icons-->
@@ -14,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap" rel="stylesheet">
     <!-- <link rel="stylesheet" href="css/compressed/main.css"> -->
     <link rel="stylesheet" href="css/prefixed/main.css">
-    <title>ohmyfood</title>
+    <title>ohmyfood! - Accueil</title>
 </head>    
 <body class="home">
     <div class="loader">
