--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
 
     <header class="header">
-        <h1>ohmyfood</h1>
+        <a href="index.html"><h1>ohmyfood</h1></a>
     </header>
     <main class="home-main">
         <section class="intro">
