--- a/menus/le-delice-des-sens.html
+++ b/menus/le-delice-des-sens.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&family=Shrikhand&display=swap" rel="stylesheet">
     <!-- <link rel="stylesheet" href="../css/compressed/main.css"> -->
     <link rel="stylesheet" href="../css/prefixed/main.css">
-    <title>Le délice des sens</title>
+    <title>ohmyfood! - Le délice des sens</title>
 </head>
 <body class="menu">
     <header class="header">
