--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     <!--Import Google fonts-->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap" rel="stylesheet">
-    <!-- <link rel="stylesheet" href="css/compressed/main.css"> -->
-    <link rel="stylesheet" href="css/prefixed/main.css">
+    <link rel="stylesheet" href="css/compressed/main.css">
     <title>ohmyfood! - Accueil</title>
 </head>    
 <body class="home">
@@ -29,6 +28,7 @@
     <header class="header">
         <a href="index.html"><h1>ohmyfood</h1></a>
     </header>
+    
     <main class="home-main">
         <section class="intro">
             <div class="top-banner">
