authorising google search console

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     restaurants car leur menu est préparé à l’avance. Plus de perte de temps à consulter la carte!">
     <meta name="author" content="Diella, Ching-Yao TSENG">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--embading fontawesome icons-->
+    <!--Authorising Google Search Console-->
+    <meta name="google-site-verification" content="ILYZBjhqS9wokmN0DTnTKD3_a6onxto371lZsRLxVH0" />
+    <!--Embading fontawesome icons-->
     <script src="https://kit.fontawesome.com/7701b960e8.js" crossorigin="anonymous"></script>
     <!--Import Google fonts-->
     <link rel="preconnect" href="https://fonts.gstatic.com">
