rename classes in spinner

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <title>ohmyfood! - Accueil</title>
 </head>    
 <body class="home">
-    <div class="loader">
+    <div class="spinner-background">
         <div class="spinner">
-            <div class="spinner-primary"></div>
-            <div class="spinner-secondary"></div>
+            <div class="spinner__primary"></div>
+            <div class="spinner__secondary"></div>
             <div class="loading-text"><p>ohmyfood</p></div>
         </div>
     </div>
