replace photos in homepage by thumbnails to improve performance

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     restaurants car leur menu est préparé à l’avance. Plus de perte de temps à consulter la carte!">
     <meta name="author" content="Diella, Ching-Yao TSENG">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="canonical" href="https://ohmyfood.jecodejesuis.com/index.html" />
     <!--Authorising Google Search Console-->
     <meta name="google-site-verification" content="ILYZBjhqS9wokmN0DTnTKD3_a6onxto371lZsRLxVH0" />
     <!--Embading fontawesome icons-->
@@ -77,7 +78,7 @@
                 <div class="card">
                     <a href="./menus/la-palette-du-gout.html">
                         <p class="new">Nouveau</p>
-                        <img class="card__img" src="./images/menus/la-palette-du-gout.jpg" alt="Photo: La palette du goût">
+                        <img class="card__img" src="./images/menus/thumbnails/la-palette-du-gout.jpg" alt="Photo: La palette du goût">
                         <div class="card__content">
                             <h3 class="card__title">La palette du goût</h3>
                             <p class="card__descr">Ménilmontant</p>    
@@ -88,7 +89,7 @@
                 
                 <div class="card"> 
                     <a href="./menus/la-note-enchantee.html">
-                        <img class="card__img" src="./images/menus/la-note-enchantee.jpg" alt="Photo: La note enchantée">
+                        <img class="card__img" src="./images/menus/thumbnails/la-note-enchantee.jpg" alt="Photo: La note enchantée">
                         <p class="new">Nouveau</p>
                         <div class="card__content">
                             <h3 class="card__title">La note enchantée</h3>
@@ -100,7 +101,7 @@
 
                 <div class="card">
                     <a href="./menus/a-la-francaise.html">
-                        <img class="card__img" src="./images/menus/a-la-francaise.jpg" alt="Photo: À la française">
+                        <img class="card__img" src="./images/menus/thumbnails/a-la-francaise.jpg" alt="Photo: À la française">
                         <div class="card__content">
                             <h3 class="card__title">À la française</h3>
                             <p class="card__descr">Cité Rouge</p>                            
@@ -111,7 +112,7 @@
 
                 <div class="card">
                     <a href="./menus/le-delice-des-sens.html">
-                        <img class="card__img" src="./images/menus/le-delice-des-sens.jpg" alt="Photo: Le délice des sens">
+                        <img class="card__img" src="./images/menus/thumbnails/le-delice-des-sens.jpg" alt="Photo: Le délice des sens">
                         <div class="card__content">
                             <h3 class="card__title">Le délice des sens</h3>
                             <p class="card__descr">Folie-Méricourt</p>    
