add link to footer logo, add animation to footer links

--- a/menus/la-palette-du-gout.html
+++ b/menus/la-palette-du-gout.html
@@ -160,7 +160,7 @@
 
     <footer class="footer">
         <div class="container">
-            <h4 class="footer__title">ohmyfood</h4>
+            <a href="index.html"><h4 class="footer__title">ohmyfood</h4></a>
             <ul>
                 <li><a href="#"><p><span class="footer__icon fas fa-utensils fa-fw fa-xs"></span>Proposer un restaurant</p></a></li>
                 <li><a href="#"><p><span class="footer__icon fas fa-hands-helping fa-fw fa-xs"></span>Devenir partenaire</p></a></li>
