--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!--Authorising Google Search Console-->
     <meta name="google-site-verification" content="ILYZBjhqS9wokmN0DTnTKD3_a6onxto371lZsRLxVH0" />
     <!--Embading fontawesome icons-->
-    <script src="https://kit.fontawesome.com/7701b960e8.js" crossorigin="anonymous"></script>
+    <script defer src="https://kit.fontawesome.com/7701b960e8.js" crossorigin="anonymous"></script>
     <!--Import Google fonts-->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700;1,900&family=Shrikhand&display=swap" rel="stylesheet">
