apply footer to all pages

--- a/menus/a-la-francaise.html
+++ b/menus/a-la-francaise.html
@@ -160,13 +160,25 @@
     </main>
 
     <footer class="footer">
-        <div class="container">
-            <a href="index.html"><h4 class="footer__title">ohmyfood</h4></a>
-            <ul>
-                <li><a href="#"><p><span class="footer__icon fas fa-utensils fa-fw fa-xs"></span>Proposer un restaurant</p></a></li>
-                <li><a href="#"><p><span class="footer__icon fas fa-hands-helping fa-fw fa-xs"></span>Devenir partenaire</p></a></li>
-                <li><a href="#"><p>Mentions légales</p></a></li>
-                <li><a href="mailto:contact@ohmyfood.fr"><p>Contact</p></a></li>
+        <div class="grid">
+            <a href="../index.html">
+                <h4 class="footer__title grid-item">ohmyfood</h4>
+            </a>
+            <p class="note grid-item">This is a school project, please check out <a
+                    href="https://github.com/diellatseng/OhMyFood">Github page</a> here.</p>
+            <ul class="grid-item">
+                <li><a href="#">
+                        <p><span class="footer__icon fas fa-utensils fa-fw fa-xs"></span>Proposer un restaurant</p>
+                    </a></li>
+                <li><a href="#">
+                        <p><span class="footer__icon fas fa-hands-helping fa-fw fa-xs"></span>Devenir partenaire</p>
+                    </a></li>
+                <li><a href="#">
+                        <p>Mentions légales</p>
+                    </a></li>
+                <li><a href="mailto:contact@ohmyfood.fr">
+                        <p>Contact</p>
+                    </a></li>
             </ul>
         </div>
     </footer>
