--- a/index.html
+++ b/index.html
@@ -145,18 +145,10 @@
             <p class="note grid-item">This is a school project, please check out <a
                     href="https://github.com/diellatseng/OhMyFood">Github page</a> here.</p>
             <ul class="grid-item">
-                <li><a href="#">
-                        <p><span class="footer__icon fas fa-utensils fa-fw fa-xs"></span>Proposer un restaurant</p>
-                    </a></li>
-                <li><a href="#">
-                        <p><span class="footer__icon fas fa-hands-helping fa-fw fa-xs"></span>Devenir partenaire</p>
-                    </a></li>
-                <li><a href="#">
-                        <p>Mentions légales</p>
-                    </a></li>
-                <li><a href="mailto:contact@ohmyfood.fr">
-                        <p>Contact</p>
-                    </a></li>
+                <li><a href="#"><p><span class="footer__icon fas fa-utensils fa-fw fa-xs"></span>Proposer un restaurant</p></a></li>
+                <li><a href="#"><p><span class="footer__icon fas fa-hands-helping fa-fw fa-xs"></span>Devenir partenaire</p></a></li>
+                <li><a href="#"><p>Mentions légales</p></a></li>
+                <li><a href="mailto:contact@ohmyfood.fr"><p>Contact</p></a></li>
             </ul>
         </div>
     </footer>
